# takuto-core

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY-NPM.txt  THIRD-PARTY-RUST.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  ]  about.hbs  about.toml  config.toml.example  deny.toml  docker-compose.dind.yml  docker-compose.lm-bridge.yml  docker-compose.mariadb.yml  docker-compose.postgres.yml  docker-compose.yml  maestro.env.example  takuto.env.example
crates/maestro-cli/: Cargo.toml
crates/maestro-cli/src/: main.rs
crates/maestro-cli/tests/: provisioning.rs
crates/maestro-core/: Cargo.toml
crates/maestro-core/migrations/: 20260101000001_initial_users_credentials_recovery.sql  20260102000001_login_attempts_and_session_columns.sql  20260103000001_workspace_commands.sql  20260104000001_user_worktree_commands.sql  20260105000001_repositories_and_user_repos.sql  20260106000001_user_credentials_and_audit.sql  20260116000001_pluggable_db_system_metadata.sql  20260117000001_work_items_and_logs.sql  20260118000001_work_items_repository_id.sql  20260605000001_work_items_soft_delete.sql
crates/maestro-core/src/: agent_prompt.rs  config.rs  config_watcher.rs  config_writer.rs  container.rs  dev_mock.rs  docker_hooks.rs  error.rs  github_app.rs  lib.rs  license.rs  process.rs  repo_reconcile.rs  skill_resolve.rs
crates/maestro-core/src/actions/: dry_run.rs  error.rs  gh_github.rs  mod.rs  real.rs  traits.rs
crates/maestro-core/src/auth/: bundle.rs  error.rs  gh_client.rs  master_key.rs  mod.rs  pat_validation.rs  seal.rs
crates/maestro-core/src/claude/: error.rs  mod.rs  pm_agent.rs  session.rs
crates/maestro-core/src/codex/: session.rs
crates/maestro-core/src/config/: agent.rs  agent_legacy.rs  database.rs  error.rs  general.rs  git.rs  jira.rs  load.rs  mod.rs  patches.rs  runtime.rs  tests.rs  web.rs
crates/maestro-core/src/container/: dind_paths.rs  docker_args.rs  editor.rs  mod.rs  port_scanner.rs  reap.rs  run_command.rs  runner.rs  runtime.rs  secrets_bundle.rs  terminal.rs  volumes.rs  wrap_command.rs
crates/maestro-core/src/cursor/: session.rs
crates/maestro-core/src/db/: adapter.rs  credential_audit.rs  credentials.rs  error.rs  github_credentials.rs  importer.rs  log_retention.rs  login_attempts.rs  migrate.rs  migration.rs  mod.rs  models.rs  onboarding.rs  pool.rs  provider_credentials.rs  repositories.rs  schema.rs  tests_phase2a_master_key.rs  upsert.rs  user_work_item_flows.rs  user_worktree_commands.rs  users.rs  work_items.rs  workspace_commands.rs
crates/maestro-core/src/docker_hooks/: gh_auth.rs  hook_runner.rs  mod.rs  process.rs  status.rs  status_types.rs
crates/maestro-core/src/git/: error.rs  mod.rs  pr.rs  remote.rs  worktree.rs  worktree_remove.rs
crates/maestro-core/src/github/: auth_resolver.rs  gh_cli.rs  mod.rs  poller.rs  pr_merge_poller.rs
crates/maestro-core/src/github_app/: error.rs
crates/maestro-core/src/jira/: acli.rs  adf_markdown.rs  browse_url.rs  client.rs  error.rs  mod.rs  poller.rs  source.rs
crates/maestro-core/src/opencode/: mod.rs  session.rs
crates/maestro-core/src/workflow/: dashboard_progress.rs  definitions.rs  engine.rs  helpers.rs  log_sink.rs  log_writer.rs  mod.rs  outcome.rs  snapshot.rs  state.rs  step.rs  stream_humanize.rs
crates/maestro-web/: Cargo.toml
crates/maestro-web/src/: auth.rs  lib.rs  server.rs  session_registry.rs  state.rs  test_helpers.rs
crates/maestro-web/src/assets/: app.js  config.html  index.html  login.html  styles.css
crates/maestro-web/src/middleware/: csrf.rs  deprecation.rs  mod.rs  security_headers.rs
crates/maestro-web/src/routes/: admin.rs  auth.rs  config.rs  config_agent.rs  config_jira.rs  credentials.rs  github.rs  jira.rs  me_flows.rs  mod.rs  onboarding.rs  polling.rs  repos.rs  repositories.rs  sessions.rs  tickets.rs  ws.rs  (+2 more)
crates/maestro-web/tests/: admin_gates.rs  argon2_rehash.rs  auth_pin.rs  auth_resolver.rs  config_agent.rs  cookie_secure.rs  credentials.rs  csrf.rs  editor_bundle_lifetime.rs  flows_seeding.rs  get_workflow_pr_fields_db_cutover.rs  get_workflow_report_db_cutover.rs  get_workflow_scalars_db_cutover.rs  list_workflows_pr_fields_db_cutover.rs  list_workflows_scalars_db_cutover.rs  me_flows.rs  onboarding.rs  poller_owner.rs  rate_limit.rs  read_serves_db_divergence_db_cutover.rs  repositories.rs  repositories_reconciliation.rs  require_workflow_access_db_cutover.rs  security_headers.rs  session_rotation.rs  terminal_write_failure_db_cutover.rs  tickets_authz.rs  work_item_log.rs  work_item_steps.rs  workflow_counts_db_cutover.rs  workflow_repo_filter.rs  worktree_commands.rs  worktree_init.rs  ws_isolation.rs
crates/takuto-cli/: Cargo.toml
crates/takuto-cli/src/: cli.rs  main.rs
crates/takuto-cli/tests/: bootstrap.rs  provisioning.rs
crates/takuto-web/: Cargo.toml
crates/takuto-web/src/: auth.rs  container_spawner.rs  dependency_status.rs  lib.rs  server.rs  session_registry.rs  state.rs  test_helpers.rs  ts_bindings.rs
crates/takuto-web/tests/: admin_gates.rs  argon2_rehash.rs  auth_pin.rs  auth_resolver.rs  config_agent.rs  cookie_secure.rs  credentials.rs  csrf.rs  editor_bundle_lifetime.rs  editor_terminal_teardown.rs  flows_seeding.rs  get_workflow_pr_fields_db_cutover.rs  get_workflow_report_db_cutover.rs  get_workflow_scalars_db_cutover.rs  list_workflows_pr_fields_db_cutover.rs  list_workflows_scalars_db_cutover.rs  me_flows.rs  onboarding.rs  poller_owner.rs  port_chips.rs  rate_limit.rs  read_serves_db_divergence_db_cutover.rs  repositories.rs  repositories_reconciliation.rs  require_workflow_access_db_cutover.rs  security_headers.rs  session_rotation.rs  terminal_write_failure_db_cutover.rs  tickets_authz.rs  work_item_log.rs  work_item_steps.rs  workflow_counts_db_cutover.rs  workflow_repo_filter.rs  worktree_commands.rs  worktree_init.rs  ws_isolation.rs
(+735 files in other folders)
