[workspace]
members = ["crates/maestro-core", "crates/maestro-web", "crates/maestro-cli"]
resolver = "2"

[workspace.package]
version = "0.3.5"
edition = "2024"
license = "FSL-1.1-ALv2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5"

# Web
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.10"
# Pin transitive `cookie` → `time`: 0.3.46+ MSRV is Rust 1.88; Docker uses `rust:1.85-bookworm`.
time = "=0.3.45"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# JWT / GitHub App authentication
jsonwebtoken = "9"

# Unix process management
libc = "0.2"

# Internal crates
maestro-core = { path = "crates/maestro-core" }
maestro-web = { path = "crates/maestro-web" }
