[workspace]
members = ["crates/maestro-core", "crates/maestro-web", "crates/maestro-cli"]
resolver = "2"

[workspace.package]
version = "0.5.15"
edition = "2024"
license = "FSL-1.1-ALv2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5"

# Web
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.10"
# Pin transitive `cookie` → `time`: 0.3.46+ MSRV is Rust 1.88; Docker uses `rust:1.85-bookworm`.
time = "=0.3.45"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
# Per-IP rate limiting (plan-02 AC-3). Pinned to a release tested with
# axum 0.8 + tower-http 0.6.
tower_governor = "0.8"
rust-embed = "8"
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# JWT / GitHub App authentication
jsonwebtoken = "9"

# File system utilities
fs2 = "0.4"

# Database — legacy embedded SQLite. Kept during the plan-11 cutover so the
# importer can read the old maestro.db; dropped once sqlx's SQLite driver
# takes over (plan-11 §10 step 8).
rusqlite = { version = "0.32", features = ["bundled"] }

# Plan-11: pluggable backends via sqlx. Tokio + rustls runtime; SQLite,
# Postgres, MySQL/MariaDB drivers; migrate framework; macros for compile-time
# checked queries (optional). `chrono` + `uuid` feature flags map our
# Rust types onto the wire format.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "mysql",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Hashing (used by `Config::provisioning_sha` to detect install_commands churn)
sha2 = "0.10"

# Random number generation
rand = "0.9"

# Unix process management
libc = "0.2"

# Internal crates
maestro-core = { path = "crates/maestro-core" }
maestro-web = { path = "crates/maestro-web" }

# Release profile — see lore/code-quality-principles.md §5 (the release build
# is the standing configuration; do not override per-commit).
#   strip = "symbols"   — drop symbol tables from the final binary.
#   lto = "thin"        — cross-crate optimisation; ~3-5× link time vs. off,
#                         but typically 10-20% smaller / faster binaries.
#   codegen-units = 1   — one codegen unit per crate so LLVM can apply the
#                         widest inlining + dead-code elimination.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
