[workspace]
members = ["crates/takuto-core", "crates/takuto-web", "crates/takuto-cli"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "FSL-1.1-ALv2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml_ng = "0.10"
# Rust -> TypeScript type generation for the dashboard wire DTOs. The
# `#[derive(TS)]` impls compile into normal builds; co-located `#[cfg(test)]`
# `export_all_to` tests (run under `cargo test`) write the committed
# `ui/src/api/generated/` files that a CI drift check diffs against.
# `default-features = false` drops `serde-compat` (its parser warns on
# `skip_serializing_if`, breaking the zero-warning bar) — serde behavior the
# DTOs rely on is mirrored with explicit `#[ts(...)]` attributes instead.
ts-rs = { version = "10", default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5"

# Web
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.10"
# Pin transitive `cookie` → `time`: 0.3.46+ MSRV is Rust 1.88; Docker uses `rust:1.85-bookworm`.
time = "=0.3.45"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
# Per-IP rate limiting. Pinned to a release tested with
# axum 0.8 + tower-http 0.6.
tower_governor = "0.8"
rust-embed = "8"
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# JWT / GitHub App authentication
jsonwebtoken = "9"

# File system utilities
fs2 = "0.4"

# Database — legacy embedded SQLite. Kept during the cutover so the
# importer can read the old takuto.db; dropped once sqlx's SQLite
# driver fully takes over.
rusqlite = { version = "0.32", features = ["bundled"] }

# Pluggable backends via sqlx. Tokio + rustls runtime; SQLite,
# Postgres, MySQL/MariaDB drivers; migrate framework; macros for compile-time
# checked queries (optional). `chrono` + `uuid` feature flags map our
# Rust types onto the wire format.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "mysql",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Hashing (used by `Config::provisioning_sha` to detect install_commands churn)
sha2 = "0.10"

# Random number generation
rand = "0.9"

# Unix process management
libc = "0.2"

# Internal crates
takuto-core = { path = "crates/takuto-core" }
takuto-web = { path = "crates/takuto-web" }

# Single source of truth for lints across the workspace. Each crate opts in
# with `[lints] workspace = true`.
[workspace.lints.rust]
# Audited libc/FFI sites carry a local `#[allow(unsafe_code)]` with a reason;
# any new unsafe elsewhere is a hard error.
unsafe_code = "deny"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints with pre-existing hits are relaxed for now and ratcheted back
# to "warn" as the code is cleaned up. New pedantic lints not listed here still
# fire on new code. Remove an entry to re-enable that lint workspace-wide.
doc_markdown = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
too_many_lines = "allow"
ignored_unit_patterns = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
items_after_statements = "allow"
uninlined_format_args = "allow"
cast_possible_wrap = "allow"
single_match_else = "allow"
assigning_clones = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
manual_string_new = "allow"
cast_lossless = "allow"
if_not_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
format_push_string = "allow"
return_self_not_must_use = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
stable_sort_primitive = "allow"
needless_pass_by_value = "allow"
implicit_hasher = "allow"
unused_async = "allow"
needless_continue = "allow"
used_underscore_binding = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
explicit_iter_loop = "allow"
needless_raw_string_hashes = "allow"
missing_fields_in_debug = "allow"
cast_sign_loss = "allow"
ref_option = "allow"
redundant_else = "allow"
filter_map_next = "allow"
elidable_lifetime_names = "allow"
bool_to_int_with_if = "allow"
unnecessary_literal_bound = "allow"
cast_precision_loss = "allow"
unreadable_literal = "allow"
unused_self = "allow"
trivially_copy_pass_by_ref = "allow"
naive_bytecount = "allow"

# Release profile — see lore/code-quality-principles.md §5 (the release build
# is the standing configuration; do not override per-commit).
#   strip = "symbols"   — drop symbol tables from the final binary.
#   lto = "thin"        — cross-crate optimisation; ~3-5× link time vs. off,
#                         but typically 10-20% smaller / faster binaries.
#   codegen-units = 1   — one codegen unit per crate so LLVM can apply the
#                         widest inlining + dead-code elimination.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
