[package]
name = "maestro-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
# CSPRNG for session path tokens (≥128 bits of entropy from OS entropy source).
getrandom = "0.3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
