[package]
name = "maestro-web"
version.workspace = true
edition.workspace = true

[dependencies]
maestro-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
cookie = "0.18"
hex = "0.4"
hmac = "0.12"
tower = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
sha2 = "0.10"
subtle = "2"
