[package]
name = "maestro-web"
version.workspace = true
edition.workspace = true

[dependencies]
maestro-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
cookie = "0.18"
hex = "0.4"
hmac = "0.12"
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
time = { workspace = true }
sha2 = "0.10"
subtle = "2"
# Reverse-proxy plumbing for /s/{token}/* — forwards HTTP requests and tunnels
# WebSocket upgrades from the shared dashboard listener to per-session backends
# bound on loopback.
hyper = { version = "1", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"

[dev-dependencies]
# Phase 2b.1: the credentials integration test implements the
# `maestro_core::auth::GhClient` trait, which is `#[async_trait]`.
async-trait = { workspace = true }
